--- a/pom.xml
+++ b/pom.xml
@@ -399,13 +399,11 @@
             <version>4.0-SNAPSHOT</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple -->
-        <!--
-         dependency>
+         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-rng-simple</artifactId>
             <version>1.2</version>
-        </dependency
-        -->
+        </dependency>
 
 
 
